--- a/Equipment-Management-System/public/css/post.css
+++ b/Equipment-Management-System/public/css/post.css
@@ -67,3 +67,78 @@
     background-color: var(--blackC);
     justify-content: center;
 }
+
+
+/* paper card */
+
+.card-container .card-div {
+    display: flex;
+    width: 100%;
+}
+
+.card-div .card {
+    display: flex;
+    flex-direction: column;
+    width: 33.333333333%;
+    margin: 1rem 1rem;
+    background-color: rgba(0, 0, 0, 0.144);
+    border: 0px;
+    color: white;
+}
+
+
+/* card-btn */
+
+.card-container .card-btns {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card .cardTitle {
+    display: flex;
+    padding: 1rem;
+    border-bottom: 3px solid var(--orange);
+    background-color: rgba(255, 255, 255, 0.322);
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+}
+
+.card .cardBody .cardBody-content {
+    display: flex;
+    align-items: center;
+}
+
+.card .cardBody .cardBody-content:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+}
+
+.cardBody .cardBtn .btns {
+    padding: 1rem;
+    border: 0px;
+    font-weight: bold;
+    width: 100%;
+}
+
+.cardBody .cardBtn .btn-agree {
+    background-color: #d4edda;
+    color: #155724;
+}
+
+.cardBody .cardBtn .btn-disagree {
+    background-color: #f8d7da;
+    color: #721c24;
+}
+
+.cardBody-content .title {
+    margin: 0.5rem;
+    font-weight: bold;
+    padding: 1rem;
+    font-size: 18px;
+    /* background-color: rgba(255, 255, 255, 0.246); */
+}
+
+.card-btns nav ul li {
+    margin: 0rem 0.5rem;
+}
