--- a/Equipment-Management-System/public/css/home.css
+++ b/Equipment-Management-System/public/css/home.css
@@ -121,7 +121,7 @@ body {
     justify-content: space-around;
     align-items: center;
     font-weight: bold;
-    padding: 0px 20px;
+    padding: 20px;
     flex-wrap: wrap;
 }
 
