--- a/Equipment-Management-System/public/css/home.css
+++ b/Equipment-Management-System/public/css/home.css
@@ -179,9 +179,65 @@ body {
         color: white;
     }
     .sidebar-top-container .sidebar-top-header {
+        position: relative;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        z-index: 2;
+    }
+    .sidebar-top-container .sidebar-top-menu {
+        display: none;
+        padding: 1rem;
+    }
+    .sidebar-top-menu .hamburger {
+        display: flex;
+        flex-direction: column;
+        /* justify-content: center; */
+        align-items: center;
+        padding-left: 0;
+        font-weight: bold;
+        width: 100%;
+    }
+    .sidebar-top-menu .hamburger li {
+        display: flex;
+        width: 100%;
+        height: 55px;
+        list-style: none;
+        justify-content: center;
+        align-items: center;
+        margin: 0.25rem;
+    }
+    .sidebar-top-menu .hamburger li:hover {
+        /* border-radius: 100px; */
+        background-color: rgba(253, 253, 253, 0.699);
+    }
+    .sidebar-top-menu .hamburger li a {
+        text-decoration: none;
+        color: white;
+    }
+    .sidebar-top-menu .hamburger li a svg {
+        margin-right: 15px;
+    }
+    .sidebar-top-container .sidebar-top-menu.active {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        top: calc(-100vh - 90px);
+        left: 0;
+        background-color: var(--black);
+        z-index: 1;
+        animation-name: oxxo;
+        animation-duration: 0.8s;
+    }
+    @keyframes oxxo {
+        0% {
+            top: calc(-100vh - 90px);
+        }
+        100% {
+            top: 90px;
+        }
     }
     .sidebar-top-header .sidebar-top-title {
         display: flex;
@@ -196,19 +252,20 @@ body {
     .sidebar-top-title .title-first {
         color: var(--orange);
     }
-    .sidebar-top-header .sidebar-top-button {
+    .sidebar-top-header .sidebar-top-button {}
+    .sidebar-top-button .button-lists {
         display: flex;
         flex-direction: column;
         position: relative;
         justify-content: space-around;
         align-items: center;
+        cursor: pointer;
         width: 30px;
         height: 30px;
-        cursor: pointer;
     }
-    .sidebar-top-button .button-list {
+    .sidebar-top-button .button-lists .button-list {
         position: relative;
-        width: calc(100%);
+        width: 100%;
         height: 4px;
         background-color: white;
     }
